# fieldnote

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
docs/: FIELDNOTE_PLAN.md  mockup-fieldnote-app.jsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/libusb1-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
src-tauri/crates/libusb1-sys/libusb/libusb/os/: darwin_usb.c
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  usb.rs
src/components/: ImportWizard.tsx  Layout.tsx  SearchModal.tsx
src/components/ui/: button.tsx
src/lib/: theme.ts  utils.ts
src/lib/api/: hinotes.ts  summarize.ts  transcribe.ts
src/lib/db/: index.ts
src/pages/: DashboardPage.tsx  DevicePage.tsx  MeetingDetailPage.tsx  NoteDetailPage.tsx  NotesPage.tsx  SettingsPage.tsx
src/stores/: deviceStore.ts  notesStore.ts  settingsStore.ts  themeStore.ts
src/types/: index.ts
