[package]
name = "dock-notes"
version = "0.1.0"
description = "Local-first voice notes manager for HiDock P1"
authors = ["Nilesh"]
edition = "2021"

[lib]
name = "dock_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
rusb = "0.9"

[patch.crates-io]
libusb1-sys = { path = "crates/libusb1-sys" }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
